--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/node": "^20.17.17",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.1",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
     "pnpm": "^10.2.0",
