--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint:check": "prettier --check .",
-    "lint": "prettier --write ."
+    "lint": "prettier --write .",
+    "services:up": "docker compose -f src/infra/database-compose.yaml up -d",
+    "services:down": "docker compose -f src/infra/database-compose.yaml down",
+    "services:stop": "docker compose -f src/infra/database-compose.yaml stop"
   },
   "dependencies": {
     "next": "15.1.6",
