--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@types/node": "^20.17.17",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@eslint/eslintrc": "^3.3.0",
+    "@types/node": "^20.17.24",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
-    "eslint": "^9.19.0",
+    "eslint": "^9.22.0",
     "eslint-config-next": "15.1.6",
-    "pnpm": "^10.2.0",
-    "postcss": "^8.5.1",
-    "prettier": "^3.4.2",
+    "pnpm": "^10.6.5",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3"
-  }
+    "typescript": "^5.8.2"
+  },
+  "packageManager": "pnpm@10.2.0"
 }
