--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
     "lint": "prettier --write .",
     "services:up": "docker compose -f src/infra/database-compose.yaml up -d",
     "services:down": "docker compose -f src/infra/database-compose.yaml down",
-    "services:stop": "docker compose -f src/infra/database-compose.yaml stop"
+    "services:stop": "docker compose -f src/infra/database-compose.yaml stop",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --create-only",
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "ts-node --compilerOptions  '{\"module\":\"CommonJS\"}' src/infra/utils/seed.ts",
+    "prisma:lint:write": "ts-node --compilerOptions  '{\"module\":\"CommonJS\"}' src/infra/utils/sort.ts",
+    "prisma:reset": "prisma migrate reset --force && pnpm prisma:seed",
+    "prisma:deploy": "prisma migrate deploy"
+  },
+  "prisma": {
+    "schema": "src/infra/prisma/schema.prisma",
+    "seed": "ts-node --compilerOptions  '{\"module\":\"CommonJS\"}' src/infra/prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "6.5.0",
     "next": "15.1.6",
+    "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -23,13 +36,16 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "dotenv": "^16.4.7",
+    "dotenv-cli": "^8.0.0",
     "dotenv-expand": "^12.0.1",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.1.6",
     "pnpm": "^10.6.5",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
+    "readline": "^1.3.0",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
   "packageManager": "pnpm@10.2.0"
