--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint:check": "prettier --check .",
-    "lint": "prettier --write .",
+    "lint:prettier:check": "prettier --check .",
+    "lint:prettier:write": "prettier --write .",
+    "lint:eslint:check": "next lint",
     "services:up": "docker compose -f src/infra/database-compose.yaml up -d",
     "services:down": "docker compose -f src/infra/database-compose.yaml down",
     "services:stop": "docker compose -f src/infra/database-compose.yaml stop",
