--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prisma:seed": "ts-node --compilerOptions  '{\"module\":\"CommonJS\"}' src/infra/utils/seed.ts",
     "prisma:lint:write": "ts-node --compilerOptions  '{\"module\":\"CommonJS\"}' src/infra/utils/sort.ts",
     "prisma:reset": "prisma migrate reset --force && pnpm prisma:seed",
-    "prisma:deploy": "prisma migrate deploy"
+    "prisma:deploy": "prisma migrate deploy",
+    "test": "jest"
   },
   "prisma": {
     "schema": "src/infra/prisma/schema.prisma",
@@ -29,10 +30,14 @@
     "next": "15.1.6",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recommended": "link:plugin:jest/recommended"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/node": "^20.17.24",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
@@ -41,6 +46,8 @@
     "dotenv-expand": "^12.0.1",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.1.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "pnpm": "^10.6.5",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
