--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@prisma/client": "6.5.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-jest": "^28.11.0",
     "next": "15.1.6",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
@@ -50,7 +52,6 @@
     "jest-environment-jsdom": "^29.7.0",
     "pnpm": "^10.6.5",
     "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
     "readline": "^1.3.0",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
