--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -13,12 +13,18 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "22.14.0"
+          cache: "pnpm"
+
+      - name: Install PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: "10.2.0"
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm i --frozen-lockfile
 
       - name: Run Lint
-        run: npm run lint:prettier:check
+        run: pnpm run lint:prettier:check
 
   eslint:
     name: EsLint
@@ -30,9 +36,15 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "22.14.0"
+          cache: "pnpm"
+
+      - name: Install PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: "10.2.0"
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm i --frozen-lockfile
 
       - name: Run Lint
-        run: npm run lint:eslint:check
+        run: pnpm run lint:eslint:check
