--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,9 +13,15 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "22.14.0"
+          cache: "pnpm"
+
+      - name: Install PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: "10.2.0"
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm i --frozen-lockfile
 
       - name: Run tests
-        run: npm test
+        run: pnpm test
