:recycle: fix: `prettier` erros

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-jest": "^28.11.0",
     "next": "15.1.6",
+    "prettier": "^3.5.3",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
